# wav2mp3

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dirent_win/: CMakeLists.txt
lame/: CMakeLists.txt
lame/lib/macosx/: libmp3lame.0.dylib  libmp3lame.la
lame/lib/win/: libmp3lame-static.lib
wav2mp3/: CMakeLists.txt
wav2mp3/include/: dir_container.h  dir_iterator.h  dirent.h  encoder.h  file_iterator.h  logger.h  thread_pool.h  wave_file.h  wave_header.h
wav2mp3/src/: dir_container.cpp  dir_iterator.cpp  encoder.cpp  file_iterator.cpp  logger.cpp  main.cpp  thread_pool.cpp  wave_file.cpp  wave_header.cpp
